P3-101(#98) [CHORE]: gateway 수정