@@ -2,55 +2,43 @@ package finpago.gateway.filter.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.reactive.CorsWebFilter;
-import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
-import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
-import org.springframework.security.config.web.server.ServerHttpSecurity;
-import org.springframework.security.web.server.SecurityWebFilterChain;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
-@EnableWebFluxSecurity
 public class SecurityConfig {
 
+    // 기타 설정들...
+
     @Bean
-    public SecurityWebFilterChain securityWebFilterChain(ServerHttpSecurity http) {
-        http
-                .csrf(ServerHttpSecurity.CsrfSpec::disable)  // CSRF 비활성화
-                .cors(cors -> cors.disable())  // CORS 설정을 별도 필터에서 처리하므로 비활성화
-                .authorizeExchange(exchanges -> exchanges
-                        .pathMatchers("/v1/api/auth/**", "/v1/api/fillings/**").permitAll()  // 인증 없이 허용할 경로
-                        .anyExchange().authenticated()  // 나머지 요청은 인증 필요
-                );
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+
+        // 기타 필터 체인 관련 설정들...
+
+        http.cors().configurationSource(corsConfigurationSource());
 
         return http.build();
+
     }
 
     @Bean
-    public CorsWebFilter corsWebFilter() {
-        CorsConfiguration config = new CorsConfiguration();
-
-        // ✅ CORS 설정 적용 (모든 Origin, Header, Method 허용)
-        config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of("*"));  // 🔥 프론트엔드 도메인으로 변경 추천
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowedMethods(List.of(
-                HttpMethod.GET.name(),
-                HttpMethod.POST.name(),
-                HttpMethod.PUT.name(),
-                HttpMethod.DELETE.name(),
-                HttpMethod.OPTIONS.name()  // Preflight 요청 허용
-        ));
-        config.setExposedHeaders(List.of(HttpHeaders.AUTHORIZATION, HttpHeaders.CONTENT_TYPE));
-
-        // ✅ 모든 경로에 대해 CORS 설정 적용
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.addAllowedHeader("*");
+        configuration.addAllowedOriginPattern("*");
+        configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
 
-        return new CorsWebFilter(source);
+        source.registerCorsConfiguration("/**", configuration);
+
+        return source;
     }
+
 }
